Nav Fix - Tablet Mode
Adjusts mobile nav to apply to tablet mode (<1023px). Some long phones
force screensize to be above mobile cutoff (Pixel 4a).

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -58,6 +58,66 @@
     height: auto;
   }
 
+  /* Nav Manu */
+  nav {
+    /*Size & Position */
+    height: 60px;
+    margin-bottom: 0px;
+    padding: 2px 0px;
+    /* Grid */
+    grid-template-areas: "nav-menu name external-links";
+  }
+
+  nav h1 {
+    font-size: 190%;
+  }
+
+  nav label:after {
+    display: block;
+  }
+
+  .nav-icon,
+  .nav-icon:hover {
+    height: 45px;
+  }
+
+  .nav-internal-links {
+    /* Display */
+    display: none;
+    flex-direction: column;
+    justify-content: space-evenly;
+    /* Size */
+    width: 25%;
+    max-width: 275px;
+    height: 60vh;
+    min-height: 190px;
+    padding-top: 4px;
+    /* Position */
+    position: fixed;
+    top: 60px;
+    left: 0;
+    /* Styling */
+    font-size: 120%;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+
+  .nav-internal-links a {
+    padding: 10px 0px;
+    text-align: left;
+  }
+
+  .mobile-nav {
+    display: none;
+  }
+
+  .mobile-nav:checked ~ .nav-links {
+    display: flex;
+  }
+
+  .mobile-nav:checked ~ label:after {
+    background-image: url(svg/nav-close.svg);
+  }
+
   /* Section - About Me */
   .section-aboutme h2 {
     width: auto;
@@ -88,6 +148,7 @@
   /* Section - Projects */
   .section-projects {
     grid-template-columns: 1fr minmax(25px, 200px) 1fr;
+    padding-top: 65px;
   }
 
   .project-photo-container {
@@ -101,6 +162,7 @@
   /* Section - Education */
   .section-education {
     margin: 0px;
+    padding: 65px 0px 0px 0px;
   }
 
   .section-education h2 {
@@ -116,7 +178,7 @@
 
   /* Section - Contact Me */
   .section-contactme {
-    padding: 35px 0px;
+    padding: 65px 0px 35px 0px;
   }
 
   .section-contactme h2 {
@@ -133,26 +195,13 @@
 @media only screen and (max-width: 768px) {
   /* Section - Nav */
   nav {
-    /*Size & Position */
-    height: 60px;
-    margin-bottom: 0px;
-    padding: 2px 0px;
     /* Grid */
     grid-template-rows: auto;
     grid-template-columns: 0.5fr auto 0.5fr;
     grid-template-areas: "nav-menu name .";
   }
 
-  nav h1 {
-    font-size: 200%;
-  }
-
   /* Mobile Nav */
-
-  nav label:after {
-    display: block;
-  }
-
   .nav-icon,
   .nav-icon:hover {
     height: 40px;
@@ -183,22 +232,11 @@
     padding-top: 4px;
     flex-direction: column;
     justify-content: space-evenly;
+    font-size: 100%;
   }
   .nav-internal-links a {
     padding: 5px 0px;
     text-align: left;
-  }
-
-  .mobile-nav {
-    display: none;
-  }
-
-  .mobile-nav:checked ~ .nav-links {
-    display: flex;
-  }
-
-  .mobile-nav:checked ~ label:after {
-    background-image: url(svg/nav-close.svg);
   }
 
   /* Section - About Me */
@@ -236,7 +274,6 @@
     justify-content: center;
     justify-items: center;
     text-align: center;
-    padding-top: 65px;
   }
 
   /* Re-order Elements */
@@ -295,11 +332,6 @@
   .project-vine {
     transition-duration: 0s;
     display: none;
-  }
-
-  /* Section - Education */
-  .section-education {
-    padding: 65px 0px 0px 0px;
   }
 
   /* Section - Contact Me */
